# social-graph

./: .gitignore  README.md
dna-new/: .gitignore  conductor-config.toml  config.nix
dna-new/test/: config.js  index.js  index_old.js
dna-new/test/agent/: personas.js
dna-new/utils/: Cargo.toml
dna-new/zomes/personas/code/: .hcbuild  Cargo.toml  zome.json
dna-new/zomes/personas/code/src/: lib.rs
dna-new/zomes/profiles/code/: .hcbuild  Cargo.toml
dna-new/zomes/profiles/code/src/: lib.rs
dna-new/zomes/profiles/code/src/profile/: handlers.rs
dna/test/: index.js
ui/: angular.json  package-lock.json  package.json
ui/src/: index.html
ui/src/app/: app.component.ts  config.ts
ui/src/app/content/: content.module.ts
ui/src/app/content/home/: home.component.html  home.component.ts
ui/src/app/content/home/personalist/: personalist.component.html  personalist.component.ts
ui/src/app/graphql/: resolvers_persona.ts  schema_persona.ts
ui/src/app/graphql/actions/: all-personas-gql.ts
ui/src/app/models/: Persona.ts
