[package]
  name = "utils"
version = "0.1.8"
  authors = ["Philip Beadle <philip.beadle@holo.host>"]

[dependencies]
  serde = "=1.0"
  serde_json = { version = "=1.0", features = ["preserve_order"] }
  serde_derive = "=1.0"
  hdk = "=0.0.49-alpha1"
  holochain_core_types = "=0.0.49-alpha1"
  holochain_wasm_utils = "=0.0.49-alpha1"
  holochain_json_derive = "=0.0"
